# messenger-user-management

./: .clang-format  CMakeLists.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.docker.yaml  config_vars.yaml  config_vars_testing.yaml  dynamic_config_fallback.json  secdist.json  static_config.yaml.in
postgresql/data/: initial_data.sql
postgresql/schemas/: messenger.sql
src/: dto.cpp  dto.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp  user_events_component.cpp  user_events_component.hpp  user_management_handler.cpp  user_management_handler.hpp
tests/: CMakeLists.txt  conftest.py  test_basic.py
